update className to apply appropriate CSS rule

--- a/style/style.css
+++ b/style/style.css
@@ -7,8 +7,7 @@
 	width: 75%;
 }
 
-/* unsure what item this is intended to be applied to */
-.video-item {
+.video-item img {
 	max-width: 64px;
 }
 
